修正了一些已知问题，增强稳定性。