@@ -15,7 +15,9 @@ import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.TreeMap;
+import java.util.function.BinaryOperator;
 import java.util.stream.Collectors;
 import javax.annotation.PostConstruct;
 import org.slf4j.Logger;
@@ -53,26 +55,35 @@ public class FileCacheManager implements CacheManager {
             .collect(Collectors.toMap(
                 it -> it.getByPath(SCREEN_NAME, String.class).toLowerCase(),
                 it -> it.getByPath(TIMELINE_ID, String.class),
-                (a, b) -> {
-                    // 当key相同时，取最大一个id
-                    long twiId = NumberUtil.max(Long.parseLong(a), Long.parseLong(b));
-                    return String.valueOf(twiId);
-                }, () -> new TreeMap<>(String::compareTo)));
+                mergeFunction(),
+                () -> new TreeMap<>(String::compareTo)));
     }
 
     @Override
     public void save(Map<String, String> timelines) {
         List<Map<String, Object>> list = new ArrayList<>();
 
-        timelines.forEach((key, value) -> list.add(ImmutableMap.of(SCREEN_NAME, key.toLowerCase(), TIMELINE_ID, value)));
+        timelines.entrySet().stream().collect(Collectors.toMap(
+                it -> it.getKey().toLowerCase(),
+                Entry::getValue,
+                mergeFunction(),
+                () -> new TreeMap<>(String::compareTo)))
+            .forEach((key, value) -> list.add(ImmutableMap.of(SCREEN_NAME, key.toLowerCase(), TIMELINE_ID, value)));
 
         String jsonStr = JSONUtil.toJsonPrettyStr(list);
-
         try {
             Files.delete(cache);
-            Files.write(cache, jsonStr.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE_NEW);
+            Files.writeString(cache, jsonStr, StandardOpenOption.CREATE_NEW);
         } catch (IOException e) {
             logger.error("缓存写入文件失败 - " + e.getMessage(), e);
         }
+    }
+
+    public BinaryOperator<String> mergeFunction() {
+        return (a, b) -> {
+            // 当key相同时，取最大一个id
+            long twiId = NumberUtil.max(Long.parseLong(a), Long.parseLong(b));
+            return String.valueOf(twiId);
+        };
     }
 }
